fix: align and font size

--- a/src/app.css
+++ b/src/app.css
@@ -93,6 +93,8 @@ img {
         flex-direction: row;
         align-items: center;
         gap: 80px;
+        display: flex;
+        justify-content: center;
     }
     img {
         width: 431px;
@@ -103,11 +105,11 @@ img {
         margin: 0;
     }
     h1 {
-        font-size: 6.99rem;
+        font-size: 111px;
         margin: 0 0 44px 0;
     }
     p {
-        font-size: 2.84vw;
+        font-size: 29px;
         margin: 0 0 66px 0;
     }
     button {
